--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ a{
     display: flex;
     align-items: center;
     justify-content: center;
+    
 }
 
 
@@ -32,12 +33,14 @@ a{
     background-position: top center;
     position: relative;
     z-index: 1;
+    
 }
 
 #hero::after{
     content: '';
     position: absolute;
     left: 0;
+    right: 0;
     top: 0;
     height: 100%;
     width: 100%;
@@ -49,7 +52,7 @@ a{
 #hero .hero{
     max-width: 1200px;
     margin: 0 auto;
-    padding: 0 50px;
+    padding: 0;
     justify-content: flex-start;
 }
 
