--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ a{
 }
 
 
-#hero .cta{
+.cta{
     display: inline-block;
     padding: 10px 30px;
     color: #20a39e;
@@ -97,8 +97,7 @@ a{
     transition: .3s ease;
     transition-property: background-color, color ;
 }
-
-#hero .cta:hover{
+.cta:hover{
     color: white;
     background: #20a39e;
 }
@@ -202,7 +201,7 @@ a{
 
 .offert{
     position: absolute;
-    top: 1px;
+    top: 0px;
 }
 
 
@@ -266,7 +265,119 @@ a{
 
 /*offerts*/
 
+/*about*/
 
+
+#about .about{
+    flex-direction: column-reverse;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 100px 0;
+}
+
+#about .col-left{
+    width: 250px;
+    height: 360px;
+
+}
+.about-us-img
+{
+    margin-top: 50px;
+    width: 250px;
+    height: 360px;
+    box-shadow: rgb(38, 68, 88) -12px 12px 35px;
+}
+
+#about .col-right h1{
+    color: rgb(31, 31, 34);
+    font-size: 5rem;
+    letter-spacing: 0.2rem;
+    font-weight: lighter;
+
+
+}
+#about .col-right span{
+    font-size: 4rem;
+    color: rgb(43, 88, 105);
+
+
+}
+#about .col-right p{
+    letter-spacing: 0.05rem;
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: rgb(34, 34, 37);
+    margin-bottom: 40px;
+}
+
+
+
+#about .col-right h2 {
+    font-size: 2.5rem;
+    color: rgb(43, 88, 105);
+    text-transform: uppercase;
+    letter-spacing: 0.4rem;
+}
+
+
+
+
+
+/*about*/
+
+/*contact*/
+
+#contact .contact {
+    flex-direction: column;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+#contact .contact-items{
+    width: 400px;
+    
+}
+#contact .contact-item{
+    width: 70%;
+    padding: 20px;
+    text-align: center;
+    border-radius: 10px;
+    padding: 30px;
+    margin: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    box-shadow: 0px 0px 18px rgb(187, 187, 187);
+}
+
+.contact > div > h1{
+    font-size: 3rem;
+    letter-spacing: 0.3rem;
+    font-weight: lighter;
+}
+
+.contact > div > h1 > span{
+    color: rgb(43, 88, 105);
+}
+
+#contact .contact-item h1{
+    color: rgb(43, 88, 105);
+    letter-spacing: 0.2rem;
+    text-transform: uppercase;
+}
+
+#contact .contact-item h2{
+    font-weight: lighter;
+    letter-spacing: 0.1rem;
+    
+}
+
+
+/*contact*/
 
 /*animation*/
 @keyframes text_animation{
