--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,600;1,400&display=swap');
 </style>
 
-html,body {
+body {
     margin: 0;
+    padding: 0;
   }
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
 }
 
 html{
@@ -340,7 +340,6 @@ a{
 
 #contact .contact-items{
     width: 400px;
-    padding-left: 43px;
     
 }
 #contact .contact-item{
