--- a/style.css
+++ b/style.css
@@ -104,6 +104,7 @@ a{
     margin-top: 20px;
     transition: .3s ease;
     transition-property: background-color, color ;
+    margin-bottom: 40px;
     
 }
 .cta:hover{
@@ -139,7 +140,7 @@ a{
 #menu .menu1{
     flex-direction: column;
     text-align: center;
-    max-width: 1500px;
+    
     margin: 0 auto;
     padding: 100px 0;
 }
@@ -267,7 +268,7 @@ a{
 .offert-item{
     
     height: 700px;
-    width: 600px;
+    width: 800px;
     margin: 1rem 1rem;
     background-repeat: no-repeat;
     background-size: cover;
@@ -300,7 +301,6 @@ a{
     justify-content: center;
     align-items: center;
     text-align: center;
-    max-width: 1200px;
     margin: 0 auto;
     padding: 50px 0;
     
@@ -547,3 +547,116 @@ a{
 
 
 /* MOBILE */
+
+/* DESKTOP */
+@media only screen and (min-width:1000px){
+    .cta{
+        font-size: 4rem;
+    }
+    #hero h1{
+        font-size: 6rem;
+    }
+    #menu .section-title{
+        font-size: 10rem;
+        
+    }
+    #menu .menu-top p{
+        font-size: 4rem;
+        line-height: 7rem;
+        letter-spacing: 0.09rem;
+        
+       
+    }
+    #menu .menu-bottom .menu-item{
+        flex-basis: 40%;
+        margin: 2%;
+        min-height: 400px;
+        
+        
+    }
+
+    #menu .menu-bottom .menu-item h2{
+        font-size: 4rem;
+        padding-bottom: 20px;
+    }
+    #menu .menu-bottom .menu-item p{
+        font-size: 2rem;
+        
+    }
+    #offerts .offert h1{
+        font-size: 6rem;
+    }
+    #about .col-right p{
+        padding-left: 200px;
+        padding-right: 200px;
+        font-size: 4rem;
+        
+    }
+    #about .col-right h1{
+        font-size: 8rem;
+    }
+    #about .col-right h2 {
+        font-size: 5rem;
+        
+        
+    }
+    #about .col-left{
+        width: 450px;
+        height: 660px;
+        overflow: hidden;
+        
+    }
+    
+    .about-us-img
+    {
+        margin: 0;
+        width: 450px;
+        height: 660px;
+        transition: transform .2s;
+        
+        
+    }
+    .contact > div > h1{
+        font-size: 8rem;
+        margin-top: 300px;
+    }
+    #contact .contact-items{
+        
+        width: 1200px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        
+    }
+    #contact .contact-item{
+        height: 600px;
+        
+    }
+    #contact .contact-item h1{
+        font-size: 6.5rem;
+    }
+    #contact .contact-item h2{
+        padding-top: 20px;
+        font-size: 3rem;
+        
+    }
+    #footer h2{
+        font-size: 3rem;
+    }
+    .brand{
+        font-size: 4rem;
+    }
+    #footer p{
+        font-size: 2rem;
+    }
+    #about .cta{
+        font-size: 3rem;
+    }
+   
+    
+    
+}
+
+
+/* DESKTOP */
